[package]
name = "pillow"
version = "0.1.0"
edition = "2018"
exclude = [
    ".github/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pillow"
path = "src/lib.rs"

[[bin]]
name = "pillow"
path = "src/main.rs"

[dependencies]
nom = "7.1.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
